--- a/templates/new.html
+++ b/templates/new.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+{% extends "layout.html" %}
 <link rel="stylesheet" href="/static/style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
+{% block content %}
     <div class="header">
         <h1>Keskustelusovellus</h1>
     </div>
@@ -14,4 +16,5 @@
         <br>
         <input type="submit" value="Lähetä">
     </form>
+{% endblock %}
 </body>
