--- a/templates/index.html
+++ b/templates/index.html
@@ -1,33 +1,20 @@
-<!DOCTYPE html>
 {% extends "layout.html" %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="/static/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}Etusivu{% endblock %}</title>
-</head>
-<body>
+{% block title %}Etusivu{% endblock %}
 {% block content %}
-    <div class="header">
-    <h1>Keskustelusovellus</h1>
+<div class="content">
+    {% for thread in threads %}
+    <div class="posts">
+    <div class="post-title">
+    <h2>{{thread.title}}</h2>
     </div>
-    <div class="content">
-        {% for thread in threads %}
-        <div class="posts">
-          <div class="post-title">
-          <h2>{{thread.title}}</h2>
-          </div>
-          <div class="post-meta">
-            {{thread.created.strftime("%Y-%m-%d")}}
-            </div>
-          <div class="post-content">
-          <p>{{thread.content}}</p>
-          </div>
-        </div>
-        {% endfor %}
-        <a href="/new">Lähetä viesti</a>
+    <div class="post-meta">
+    {{thread.created.strftime("%Y-%m-%d")}}
     </div>
-    </body>
+    <div class="post-content">
+    {{thread.content}}
+    </div>
+    </div>
+    {% endfor %}
+    <a href="/new">Lähetä viesti</a>
+</div>
 {% endblock %}
-</html>
