--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,9 @@
     <title>{% block title %}{% endblock %} - Keskustelusovellus</title>
 </head>
 <body>
+<div class="header">
+<h1>Keskustelusovellus</h1>
+</div>
 {% block content %}{% endblock %}
 </body>
 </html>
