--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,10 @@
+* {
+    font-family: "Lato", sans-serif;
+}
+
 .content {
     margin: auto;
     max-width: 50em;
-    font-family: "Helvetica", "Arial", sans-serif;
     padding: 2em 1em;
 }
 
@@ -12,14 +15,29 @@ body {
 
 h1 {
     color: #c73333;
+    font-weight: 800;
 }
 
 .header {
     background-color: #afeeee;
-    font-weight: bold;
     padding: 1em 1em;
     font-size: 1em;
     border-radius: 0.5em;
+    position: relative;
+}
+
+.heading {
+    padding: 0.5em;
+}
+
+.header-login {
+    padding: 0.5em;
+    position: absolute;
+    background-color: #5b5a63;
+    right: 0.5em;
+    top: 5.5em;
+    border-radius: 0.3em;
+    font-weight: 500;
 }
 
 .posts {
@@ -41,4 +59,17 @@ h1 {
 .post-meta {
     margin-bottom: 0.7em;
     font-size: 0.8em;
+}
+
+.error {
+    color: rgb(255, 22, 22);
+}
+
+.success {
+    color: rgb(0, 210, 0);
+}
+
+.button {
+    color: inherit;
+    text-decoration: none;
 }
