--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,8 +8,19 @@
 </head>
 <body>
 <div class="header">
-<h1>Keskustelusovellus</h1>
+    <div class="heading">
+        <a href="/" class="button"><h1>Keskustelusovellus</h1></a>
+    </div>
+    <div class="header-login">
+        {% if session.username %}
+        <a href="/logout" class="button">Kirjaudu ulos</a>
+        {% else %}
+        <a href="/login" class="button">Kirjaudu sisään</a>
+        {% endif %}
+    </div>
 </div>
+<div class="content">
 {% block content %}{% endblock %}
+</div>
 </body>
 </html>
