--- a/static/style.css
+++ b/static/style.css
@@ -58,7 +58,17 @@ h1 {
 
 .post-meta {
     margin-bottom: 0.7em;
-    font-size: 0.8em;
+    font-size: 0.9em;
+}
+
+.user {
+    display: inline-block;
+    padding-left: 0.2em;
+}
+
+.time {
+    display: inline-block;
+    padding-right: 0.2em;
 }
 
 .error {
