--- a/static/style.css
+++ b/static/style.css
@@ -2,12 +2,6 @@
     font-family: "Lato", sans-serif;
 }
 
-.content {
-    margin: auto;
-    max-width: 50em;
-    padding: 2em 1em;
-}
-
 body {
     background-color: #2b2a33;
     color: #fbfbfe;
@@ -32,6 +26,12 @@ h2 {
 
 .heading {
     padding: 0.5em;
+}
+
+.content {
+    margin: auto;
+    max-width: 50em;
+    padding: 2em 1em;
 }
 
 .posts {
@@ -85,4 +85,35 @@ text-align: center;
 padding: 14px 16px;
 text-decoration: none;
 font-size: 17px;
+}
+
+textarea {
+    background-color: #5b5a63;
+    border-radius: 0.5em;
+    border: solid;
+    border-color: rgb(28, 28, 28);
+    margin: 1em 0em;
+    color: #fbfbfe
+}
+
+.form {
+    font-size: 1.5em;
+}
+
+input[type=submit] {
+    font-family: "Lato", sans-serif;
+    background-color: #5b5a63;
+    color: #fbfbfe;
+    border-color: rgb(28, 28, 28);
+    border-radius: 0.5em;
+    font-size: 1em;
+    padding: 0.3em;
+}
+
+input[type=submit]:hover {
+    background-color: #4d4d54;
+}
+
+a {
+    color: inherit;
 }
