--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
     <div class="topnav">
         {% if session.username %}
         <a href="/">Etusivu</a>
-        <a href="/new">Uusi lanka</a>
+        <a href="/new_thread">Uusi lanka</a>
         <a href="/logout">Kirjaudu ulos</a>
         <a href="#profile">{{session.username}}</a> <!--TODO: Add profiles page-->
         {% else %}
