--- a/static/style.css
+++ b/static/style.css
@@ -34,7 +34,7 @@ h2 {
     padding: 2em 1em;
 }
 
-.posts {
+.post {
     background-color: #5b5a63;
     border-radius: 0.3em;
     padding: 0.7em 0.7em;
