--- a/templates/thread.html
+++ b/templates/thread.html
@@ -9,7 +9,12 @@
         <div class="time">{{thread.created.strftime("%Y-%m-%d")}}</div>
         <div class="user">{{thread.username}}</div>
     </div>
-    <div class="post-content">{{thread.content}}</div>
+    <div class="post-content">
+        {% if thread.image %}
+            <img src="../static/images/{{thread.image}}" alt="kuva">
+        {% endif %}
+        {{thread.content}}
+    </div>
 </div>
 {% if comment_count == 1 %}
 <h3>1 komentti</h3>
