--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,12 @@
         <div class="user">{{thread.username}}</div>
     </div>
     <div class="post-content">
+    {% if thread.image %}
+        <img src="../static/images/{{thread.image}}" alt="kuva">
+    {% endif %}
     {{thread.content}}
     </div>
-    <a href={{ url_for("thread", id=thread.id) }}>Kommentit</a>
+    <a href="{{ url_for('thread', id=thread.id) }}">Kommentit</a>
 </div>
 {% endfor %}
 {% endblock %}
