Add feature: topics

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <h2>{{thread.title}}</h2>
     </div>
     <div class="post-meta">
+        <div>Aihe: <a class="topic" href="{{url_for('topic', topic=thread.topic)}}">{{thread.topic}}</a></div>
         <div class="time">{{thread.created.strftime("%Y-%m-%d")}}</div>
         <div class="user">{{thread.username}}</div>
     </div>
@@ -16,7 +17,7 @@
     {% endif %}
     {{thread.content}}
     </div>
-    <a href="{{ url_for('thread', id=thread.id) }}">Kommentit</a>
+    <a href="{{url_for('thread', id=thread.id)}}">Kommentit</a>
 </div>
 {% endfor %}
 {% endblock %}
