--- a/static/style.css
+++ b/static/style.css
@@ -130,3 +130,36 @@ img {
     margin-right: auto;
     margin-bottom: 0.5em;
 }
+
+td, th {
+    table-layout: fixed;
+    border: 1px solid;
+    width: 100%;
+    padding: 15px;
+    text-align: center;
+}
+
+table {
+    background-color: #5b5a63;
+    border-collapse: collapse;
+    table-layout: fixed;
+    border: 1px solid;
+    width: 100%;
+}
+
+table a {
+    display: block;
+    text-decoration: none;
+}
+
+.empty {
+    text-align: center;
+}
+
+.sidebar {
+    border-style: solid;
+}
+
+.topic {
+    text-decoration: none;
+}
