--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,8 +23,11 @@
         {% endif %}
     </div>
 </div>
-<div class="content">
-{% block content %}{% endblock %}
+<div class="page">
+    <div class="content">
+        {% block content %}{% endblock %}
+    </div>
+    {% block sidebar %}{% endblock %}
 </div>
 </body>
 </html>
