--- a/templates/topics.html
+++ b/templates/topics.html
@@ -2,19 +2,23 @@
 {% block title %}Aiheet{% endblock %}
 {% block content %}
 <h2>Selaa aiheita</h2>
-    <table>
-        {% for tuple in topics %}
-        <tr>
-            {% for topic in tuple %}
-                <td>
-                    {% if topic %}
-                    <a href="{{ url_for('topic', topic=topic) }}">{{ topic }}</a>
-                    {% endif %}
-                </td>
+    {% if topics %}
+        <table>
+            {% for tuple in topics %}
+            <tr>
+                {% for topic in tuple %}
+                    <td>
+                        {% if topic %}
+                        <a href="{{ url_for('topic', topic=topic) }}">{{ topic }}</a>
+                        {% endif %}
+                    </td>
+                {% endfor %}
+            </tr>
             {% endfor %}
-        </tr>
-        {% endfor %}
-    </table>
+        </table>
+    {% else %}
+        <p>Aiheita ei löytynyt.</p>
+    {% endif %}
 <h2>Luo uusi aihe</h2>
 {% if session.username %}
     <form action="/topics" method="POST">
