--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,6 +15,7 @@
         <a href="/">Etusivu</a>
         <a href="/topics">Aiheet</a>
         {% if session.username %}
+        <a href="/home">Omat</a>
         <a href="/new_thread">Uusi lanka</a>
         <a href="/logout">Kirjaudu ulos</a>
         <a href="#profile">{{ session.username }}</a> <!--TODO: Add profiles page-->
